--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'com.ei'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+archivesBaseName = 'ei-service'
 
 repositories {
     mavenCentral()
